# automated_testing

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/bio_statistics/: critical_value_tables.py  utils.py
src/bio_statistics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_1.py
tests/test_bio_statistics/: test_get_ranks.py  test_tstudent.py  test_umannwhitney.py  test_wilcoxon.py
