[matadata]
name = bio_statistics
description = Tools created for Statistics In Biomedicine course.
author = Filip Matejko
license = MIT
license_file = LICENSE
platforms = unix, linux, win32, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    bio_statistics
install_requires =
    statistics==1.0.3.5
python_requires =
    >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    tox>=3.25.0
    pytest>=6.0
    pytest-cov>=3.0.0
    mypy>=0.942

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160